{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 23,
  "lineage": "70fe86f9-3c36-9f14-0f1e-99f83fd959ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "kubernetes-cluster-ec2-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012fa751ae92bf8a3",
            "association_id": "eipassoc-0cdebc2fe17e6b31c",
            "domain": "vpc",
            "id": "eipalloc-012fa751ae92bf8a3",
            "instance": "i-07510b905b9adcb7e",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0a138e9c7147d5a6f",
            "private_dns": "ip-10-0-1-79.eu-central-1.compute.internal",
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-3-126-119-200.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.119.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_role.kubernetes-master-node-role1",
            "aws_instance.kubernetes-cluster-ec2",
            "aws_key_pair.kubernets-ec2-key-pair",
            "aws_security_group.kubernetes-cluster-security-group",
            "aws_subnet.kubernetes-vpc-public-subnet",
            "aws_vpc.kubernetes-vpc",
            "tls_private_key.kubernetes-managment-key-pair",
            "aws_iam_instance_profile.kubernetes-cluster-ec2-instance-profile"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes-cluster-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0faab6bdbac9486fb",
            "arn": "arn:aws:ec2:eu-central-1:750353367788:instance/i-07510b905b9adcb7e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kubernetes-cluster-ec2-instance-profile",
            "id": "i-07510b905b9adcb7e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kubernetes-managment-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a138e9c7147d5a6f",
            "private_dns": "ip-10-0-1-79.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.79",
            "public_ip": "3.126.119.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067d5f013e82b30c5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fad86950f25e7bb1",
            "tags": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0186d58ea54a8bc26"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes-cluster-security-group",
            "aws_subnet.kubernetes-vpc-public-subnet",
            "aws_vpc.kubernetes-vpc",
            "tls_private_key.kubernetes-managment-key-pair",
            "aws_iam_instance_profile.kubernetes-cluster-ec2-instance-profile",
            "aws_iam_role.kubernetes-master-node-role1",
            "aws_key_pair.kubernets-ec2-key-pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kubernetes-vpc-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750353367788:internet-gateway/igw-03a819f2af49aeadd",
            "id": "igw-03a819f2af49aeadd",
            "owner_id": "750353367788",
            "tags": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "vpc_id": "vpc-0405fd5174a25f8a1"
          },
          "dependencies": [
            "aws_vpc.kubernetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes-vpc-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750353367788:route-table/rtb-01f74ce480c704c25",
            "id": "rtb-01f74ce480c704c25",
            "owner_id": "750353367788",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a819f2af49aeadd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0405fd5174a25f8a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubernetes-vpc",
            "aws_internet_gateway.kubernetes-vpc-internet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubernetes-vpc-route-table-associate-to-public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f17252c830385d87",
            "route_table_id": "rtb-01f74ce480c704c25",
            "subnet_id": "subnet-0fad86950f25e7bb1"
          },
          "dependencies": [
            "aws_vpc.kubernetes-vpc",
            "aws_internet_gateway.kubernetes-vpc-internet-gateway",
            "aws_route_table.kubernetes-vpc-route-table",
            "aws_subnet.kubernetes-vpc-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes-cluster-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750353367788:security-group/sg-0186d58ea54a8bc26",
            "description": "Allow the Kuberntes cluster to communicate internally and to be managed externally",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0186d58ea54a8bc26",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "147.235.201.113/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kubernetes-cluster-security-group",
            "name_prefix": "",
            "owner_id": "750353367788",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0405fd5174a25f8a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubernetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubernetes-vpc-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750353367788:subnet/subnet-0fad86950f25e7bb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fad86950f25e7bb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750353367788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "vpc_id": "vpc-0405fd5174a25f8a1"
          },
          "dependencies": [
            "aws_vpc.kubernetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750353367788:vpc/vpc-0405fd5174a25f8a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d81085bb7b391077",
            "default_route_table_id": "rtb-07407b2f0474fc340",
            "default_security_group_id": "sg-08ef9f283e3b6acf5",
            "dhcp_options_id": "dopt-0e9da1acacc25594b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0405fd5174a25f8a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07407b2f0474fc340",
            "owner_id": "750353367788",
            "tags": {
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "kubernetes.io/cluster/kubernetes": "owned"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "OutboundSecurityGroupAllowAllPublicTraffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750353367788:security-group-rule/sgr-03f751622d2e608f1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03f751622d2e608f1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0186d58ea54a8bc26",
            "security_group_rule_id": "sgr-03f751622d2e608f1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubernetes-vpc",
            "aws_security_group.kubernetes-cluster-security-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "InboundSecurityGroupAllowAllPrivateTraffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750353367788:security-group-rule/sgr-066ebe6705e1ad042",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-066ebe6705e1ad042",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0186d58ea54a8bc26",
            "security_group_rule_id": "sgr-066ebe6705e1ad042",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kubernetes-cluster-security-group",
            "aws_vpc.kubernetes-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "InboundSecurityGroupAllowAllPublicTraffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:750353367788:security-group-rule/sgr-0389f02783ce34e80",
            "cidr_ipv4": "147.235.201.113/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0389f02783ce34e80",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0186d58ea54a8bc26",
            "security_group_rule_id": "sgr-0389f02783ce34e80",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.MyPublicIp",
            "aws_security_group.kubernetes-cluster-security-group",
            "aws_vpc.kubernetes-vpc"
          ]
        }
      ]
    }
  ]
}